<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/home_title_bg"/>

        <TextView
            android:id="@+id/tv_home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="57dp"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/home_title"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:background="@drawable/add_bg_shadow"
            android:layout_marginTop="104dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="123dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/home_title1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="¥"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="60,000"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    />


            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@mipmap/home_line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@mipmap/home_high_pass_rate"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textSize="12sp"
                        android:textColor="@color/home_little_text"
                        android:text="@string/home_high"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@mipmap/home_low_interest"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textSize="12sp"
                        android:textColor="@color/home_little_text"
                        android:text="@string/home_low"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@mipmap/home_quick_loan"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textSize="12sp"
                        android:textColor="@color/home_little_text"
                        android:text="@string/home_quick_loan"/>

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/home_apply_btn"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/maincolor_btn"
                android:layout_marginRight="30dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="Apply" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/home_little_text"/>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="17dp"
        android:textSize="18sp"
        android:textColor="@color/home_little_title"
        android:textStyle="bold"
        android:text="@string/home_Step_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"

        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:src="@mipmap/home_img1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/home_img_jiantou"/>
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:src="@mipmap/home_img2"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/home_img_jiantou"/>
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:src="@mipmap/home_img3"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_explain1_text"
            android:textColor="@color/home_explain_text"
            android:textSize="12sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_explain2_text"
            android:textColor="@color/home_explain_text"
            android:textSize="12sp"
            />

    </LinearLayout>





</LinearLayout>